--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <h2 style="text-align:center; padding-bottom: 20px;">Contact Information</h2>
     <p>Do have any question or you just want to say "hello"<br>You can reach out to us on:<br></p>
     <ul style="list-style-type: circle; padding-left: 50px;">
-      <li>Our Mail: awsomeBook@gmail.com</li>
-      <li>Our phone number: +236565566563</li>
-      <li>Our address is: 23 mechigin street</li>
+      <li>Our Mail: emmanuellangufor@gmail.com</li>
+      <li>Our phone number: +237652250611</li>
+      <li>Our address is: simbock, yde cameroon</li>
     </ul>
     </section>
   
@@ -46,11 +46,7 @@
     <h5>Copyright &copy; All right reserved 2022</h5>
   </footer>
 
-
-
-
-
-
-  <script type="module" src="./module/modulefirst.js"></script>
+  <script src="singlePageScript.js"></script>
+  <script type="module" defer src="index.js"></script>
 </body>
 </html>
