--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recreating Module Booklist App</title>
   <link rel="stylesheet" href="index.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.js"></script>
+  <title>Recreating Module Booklist App</title>
 </head>
 <body>
   <nav>
@@ -17,7 +18,9 @@
       <li><a href="#form" id="newbookBtn">Add new</a></li>
       <li style="border: none;"><a href="#contact-info" id="showcontactBtn">contact</a></li>
     </ul>
+    
   </nav>
+  <span class="clock"></span>
   
   <div class="container">
   <h1>All Awesome Books</h1>
