--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.js"></script>
-  <title>Recreating Module Booklist App</title>
+  <title>Awsome Books</title>
+  <link rel="stylesheet" href="index.css" />
+  <link href="//db.onlinewebfonts.com/c/ccfdf10ba24124f7c35e43827aec5344?family=NoyhRW01-Medium" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <nav>
@@ -18,11 +18,13 @@
       <li><a href="#form" id="newbookBtn">Add new</a></li>
       <li style="border: none;"><a href="#contact-info" id="showcontactBtn">contact</a></li>
     </ul>
-    
   </nav>
-  <span class="clock"></span>
   
+    <p class="dateDisplay"></p>
+  
+
   <div class="container">
+    
   <h1>All Awesome Books</h1>
   
   <section id="section">
@@ -41,7 +43,7 @@
     <ul style="list-style-type: circle; padding-left: 50px;">
       <li>Our Mail: emmanuellangufor@gmail.com</li>
       <li>Our phone number: +237652250611</li>
-      <li>Our address is: simbock, yde cameroon</li>
+      <li>Our address is: simbock yde, cameroon</li>
     </ul>
     </section>
   
@@ -49,7 +51,8 @@
     <h5>Copyright &copy; All right reserved 2022</h5>
   </footer>
 
-  <script src="singlePageScript.js"></script>
-  <script type="module" defer src="index.js"></script>
+ <script type="text/javascript" src="singlePageScript.js"></script>
+ <script type="text/javascript" src="modules/date.js"></script>
+  <script  type="module" defer src="index.js"></script>
 </body>
 </html>
