--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Awsome Books</title>
-  <link rel="stylesheet" href="index.css" />
-  <link href="//db.onlinewebfonts.com/c/ccfdf10ba24124f7c35e43827aec5344?family=NoyhRW01-Medium" rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" href="index.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.js"></script>
+  <title>Recreating Module Booklist App</title>
 </head>
 <body>
   <nav>
@@ -18,13 +18,11 @@
       <li><a href="#form" id="newbookBtn">Add new</a></li>
       <li style="border: none;"><a href="#contact-info" id="showcontactBtn">contact</a></li>
     </ul>
-  </nav>
-  
-    <p class="dateDisplay"></p>
-  
-
-  <div class="container">
     
+  </nav>
+  <span class="clock"></span>
+  
+  <div class="container">
   <h1>All Awesome Books</h1>
   
   <section id="section">
@@ -41,9 +39,9 @@
     <h2 style="text-align:center; padding-bottom: 20px;">Contact Information</h2>
     <p>Do have any question or you just want to say "hello"<br>You can reach out to us on:<br></p>
     <ul style="list-style-type: circle; padding-left: 50px;">
-      <li>Our Mail: awsomeBook@gmail.com</li>
-      <li>Our phone number: +236565566563</li>
-      <li>Our address is: 23 mechigin street</li>
+      <li>Our Mail: emmanuellangufor@gmail.com</li>
+      <li>Our phone number: +237652250611</li>
+      <li>Our address is: simbock, yde cameroon</li>
     </ul>
     </section>
   
@@ -51,8 +49,7 @@
     <h5>Copyright &copy; All right reserved 2022</h5>
   </footer>
 
- <script type="text/javascript" src="singlePageScript.js"></script>
- <script type="text/javascript" src="modules/date.js"></script>
-  <script  type="module" defer src="index.js"></script>
+  <script src="singlePageScript.js"></script>
+  <script type="module" defer src="index.js"></script>
 </body>
 </html>
